k8n/base/artifacts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - name: nexus
        image: sonatype/nexus3:latest
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "1024Mi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "2"
