k8n/base/artifacts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
spec:
  type: ClusterIP
  selector:
    app: nexus
  ports:
    - name: http
      port: 8081
      targetPort: 8081
